# max-flow-solver

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark.cpp
examples/: problem15.cpp  realworld.cpp
include/maxflow/: dinic.hpp  edmonds_karp.hpp  flow_result.hpp  graph.hpp
src/: dinic.cpp  edmonds_karp.cpp
tests/: test_decomposition.cpp  test_dinic.cpp  test_edmonds_karp.cpp  test_mincut.cpp
